// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Profiler should start and stop profiling, handle root unmounting: 1: mount 1`] = `
[root]
  ▸ <Parent key="A">
[root]
  ▸ <Parent key="B">
`;

exports[`Profiler should start and stop profiling, handle root unmounting: 2: profiling started 1`] = `
[root]
  ▸ <Parent key="A">
[root]
  ▸ <Parent key="B">
`;

exports[`Profiler should start and stop profiling, handle root unmounting: 3: update 1`] = `
[root]
  ▸ <Parent key="A">
[root]
  ▸ <Parent key="B">
`;

exports[`Profiler should start and stop profiling, handle root unmounting: 4: unmount B 1`] = `
[root]
  ▸ <Parent key="A">
`;

exports[`Profiler should start and stop profiling, handle root unmounting: 5: unmount A 1`] = ``;

exports[`Profiler should start and stop profiling, handle root unmounting: 6: profiling stopped 1`] = ``;
